Revise content and structure in index.html
Updated content in index.html for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <h1 class="main-title">ОБУЧАЛКА</h1>
                         <h1 class="main-title shadow-text">ОБУЧАЛКА</h1>
                     </div>
-                    <p class="subtitle">Изучаем тайпсет в Photoshop с самых основ до профессионального уровня. Весь накопленный опыт в одном мануале.</p>
+                    <p class="subtitle">Изучаем тайп в Photoshop с самых основ для чайников. Мануал создан командой Lumiere Solo.</p>
                     <div class="author-block">
                         <div class="avatar-container">
                             <img src="img/avatar.jpg" alt="Askt" class="avatar">
@@ -162,7 +162,7 @@
             <div class="next-step-content">
                 <span class="next-label">ЭТАП 02</span>
                 <h2 class="next-title">Типографика и правила</h2>
-                <p class="next-description">Висячая пунктуация, переносы и золотые правила верстки. То, что превращает обычный текст в профессиональный тайпсет.</p>
+                <p class="next-description">Висячая пунктуация, переносы и золотые правила верстки. То, что превращает обычный текст в тайпсет.</p>
                 <a href="lesson/typography.html" class="next-btn">
                     <span>ЧИТАТЬ ДАЛЕЕ</span>
                     <div class="btn-icon">&rarr;</div>
@@ -177,4 +177,5 @@
 
     <script src="scripts.js"></script>
 </body>
+
 </html>
